vlib/v/checker/tests/if_match_expr.out
vlib/v/checker/tests/if_match_expr.vv:8:6: error: `if` expression branch has unsupported statement (`v.ast.ForStmt`)
    6 |     if true {1} else {-1} // OK
    7 | } else {
    8 |     for {break}
      |         ^
    9 |     {}
   10 |     -1
vlib/v/checker/tests/if_match_expr.vv:9:2: error: `if` expression branch has unsupported statement (`v.ast.Block`)
    7 | } else {
    8 |     for {break}
    9 |     {}
      |     ^
   10 |     -1
   11 | }
vlib/v/checker/tests/if_match_expr.vv:15:10: error: `match` expression branch has unsupported statement (`v.ast.AssertStmt`)
   13 | _ = match true {
   14 |     true {
   15 |         assert true
      |                ~~~~
   16 |         1
   17 |     }
vlib/v/checker/tests/if_match_expr.vv:19:3: error: `match` expression branch has unsupported statement (`v.ast.IfExpr`)
   17 |     }
   18 |     else {
   19 |         if true {} // statement not expression
      |         ~~
   20 |         (-1) // parens needed ATM due to bug
   21 |     }
